<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">reBLISS</string>
    <string name="title_activity_splash">ActivitySplash</string>
    <string name="title_activity_login">ActivityLogin</string>
    <string name="PHONE_VALIDATION">Please enter 10 digit phone number</string>
    <string name="PASSWORD_VALIDATION">Please enter min 6 digit password</string>
    <string name="title_activity_partner_selecion">ActivityPartnerSelecion</string>
    <string name="title_activity_signup">ActivitySignup</string>
    <string name="MATCH_PASSWORD_VALIDATION">Password and confirm password should match</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="channel_partner_name">First Name</string>
    <string name="channel_partner_l_name">Last Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="mobile_no_mandatory">Mobile No*</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="landline_no">Landline No</string>
    <string name="personal_mail_id">Personal Mail id</string>
    <string name="official_mail_id">Official Mail id</string>
    <string name="channel_partner_firm_name">Your Firm Name</string>
    <string name="communication_address">Communication Address</string>
    <string name="bussiness_address">Bussiness Address</string>
    <string name="validation_name">Please enter CP first name</string>
    <string name="validation_firm_name">Please enter Firm name</string>
    <string name="validation_l_name">Please enter CP last name</string>
    <string name="validation_dob">Please select your DOB</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="validation_communication_address">Please enter your Locality, Area or Street for Communication</string>
    <string name="validation_personal_officiaial_email">Please enter either personal / official email id</string>
    <string name="validation_valid_email">Please enter valid email id</string>
    <string name="title_activity_register_fos">Register reBLISS Sathi</string>
    <string name="gender_prompt">Select Gender</string>
    <string name="maritalstatus_prompt">Select Your Marital Status</string>
    <string name="title_activity_fos">ActivityFOS</string>
    <string name="title_activity_CP">ActivityCP</string>
    <string name="title_activity_home">ActivityHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_call_fos_pos_details">CallFosPosDetails</string>
    <string name="unAuthorisedUser">Unauthorized</string>
    <string name="shop_name_person_name">Shop Name /Person Name <font fgcolor='#F44336'>*</font></string>
    <string name="rs">\u20B9 </string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of YOUR_APP_NAME is available. Please update to version\s</string>
    <string name="youAreNotUpdatedMessage1">\s now</string>
    <string name="update">Update</string>
    <string name="bank_proof">Bank proof</string>
    <string name="termsandcondition"><![CDATA[Terms & Conditions]]></string>
    <string name="select_occupation"> Select Occupation</string>
    <string name="select_gender"> Select Gender</string>
    <string name="select_age_limit"> Select Age limit</string>
    <string name="select_education"> Select Education</string>
    <string name="billing_address">Billing Address</string>
    <string name="add_fos">Add Rebliss Sathi</string>
    <string name="fos_profile_details">Rebliss Sathi Profile Details</string>
    <string name="FIRST_NAME">Please enter first name</string>
    <string name="ACCOUNT_NAME">Please enter account name</string>
    <string name="ACCOUNT_NUMBER">Please enter account number</string>
    <string name="IFSC_NUMBER">Please enter IFSC number</string>
    <string name="VALID_ACCOUNT">Please Check Account number and Confirm Account Number should be same</string>
    <string name="C_ACCOUNT_NUMBER">Please enter confirm account number</string>
    <string name="BANK_NAME">Please Enter Bank Name</string>
    <string name="BANK_DETAIL">Please Enter Bank Name</string>
    <string name="LAST_NAME">Please enter last name</string>
    <string name="alliances">reBLISS TSM</string>
    <string name="retail">reBLISS Partner</string>
    <string name="minimum_5_team_members">Minimum 5 Team Members</string>
    <string name="minimum_50_team_members">Minimum 50 Team Members</string>
    <string name="select_your_partner_profile_type">Select your Partner Profile Type</string>
    <string name="do_you_have_a_store">Do you have a store</string>
    <string name="enter_your_store_name">Enter your store name</string>
    <string name="dialogMessage">"Please add your profile picture. Also update your profile and bank details from My Profile."</string>
    <string name="ph">Ph:</string>
    <string name="pesonal_profile">Profile</string>
    <string name="work_profile">Work Profile</string>
    <string name="services">Services</string>
    <string name="refrences">References</string>
    <string name="assignment">Assignments</string>
    <string name="kyc">KYC</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="document_number">Document Number</string>
    <string name="self_kyc">Self KYC</string>
    <string name="work_kyc">Work KYC</string>
    <string name="jiomart_order_taken">JioMart Order Taken</string>
    <string name="click_to_start_pine_labs_activity">CLICK TO COMPLETE PINE LABS ACTIVITY</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="sathi_record">Sathi Record</string>
    <string name="location_pincode">Location (Pincode) *</string>
    <string name="first_name">First Name. *</string>
    <string name="last_name">Last Name *</string>
    <string name="mobile_no_sathi">Mobile No. *</string>
    <string name="store_name">Store Name *</string>
    <string name="store_photo">Store Photo *</string>
    <string name="submit">Submit</string>
    <string name="rebliss_msathi_status">reBLISS Msathi status</string>
    <string name="order_id">Order ID *</string>
    <string name="activity_photo">Activity Photo *</string>
    <string name="store_id">Store ID *</string>
    <string name="gst_no">GST No.</string>
    <string name="udyog_aadhaar">Udyog Aadhaar</string>
    <string name="upload_photo">|Upload Photo|</string>
    <string name="validation_adhar">Please enter valid Aadhaar number</string>
    <string name="validation_adhar_images">Please upload Aadhaar card Images</string>
    <string name="select_sathi_record">Select Sathi Record</string>
    <string name="facebook_app_id">355131739515100</string>
    <string name="fb_login_protocol_scheme">fb355131739515100</string>
    <string name="facebook_client_token">8a39ac9f276ddf3b875d07d6dc062624</string>
    <string name="login">Login</string>
    <string name="total_earning">Total Earning</string>
    <string name="resend">Resend</string>
    <string name="resend_otp_after">Resend OTP after :</string>
    <string name="verify">Verify</string>
    <string name="please_enter_your_otp">Please enter your OTP</string>
    <string name="please_type_verification_code_nsent_to">Please type verification code \nsent to:</string>
    <string name="document">Document</string>
    <string name="version_of_application">Version of application</string>
    <string name="invoice_download">Invoice Download</string>
    <string name="show_status">Show status</string>
    <string name="rebliss_shop">Rebliss Shop</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home">Home</string>
    <string name="bank_details">Bank Details</string>
    <string name="my_profile">My Profile</string>
    <string name="tagline">Work Anytime, Anywhere</string>
    <string name="no_data_found">No data found</string>
    <string name="total_activity_0">Total Activity: 0</string>
    <string name="select_rebliss_sathi_all">Select reBLISS Sathi: All</string>
    <string name="my_team_activity_dashboard">My Team Activity Dashboard</string>
    <string name="cp_dashboard"> Dashboard</string>
    <string name="cp_profile_details">CP Profile Details</string>
    <string name="type">Type *</string>
    <string name="shop_name_person_names">Shop Name / Person name*</string>
    <string name="shop_photo">Shop Photo *</string>
    <string name="shop_unique_id">Shop Unique id</string>
    <string name="mobile_nos">Mobile No.*</string>
    <string name="shop_category">Shop category *</string>
    <string name="pincodes">Pincode:*</string>
    <string name="pincode_nonmandatory">Pincode:</string>
    <string name="states">State:*</string>
    <string name="citys">City:*</string>
    <string name="details">Details</string>
    <string name="saves">Save</string>
    <string name="saveandcontinue"><![CDATA[Save & Continue]]></string>
    <string name="first_names">First Name</string>
    <string name="last_names">Last Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="kyc_document_type">KYC Document Type</string>
    <string name="upload_file">Upload file</string>
    <string name="email_id">Email Id</string>
    <string name="genderss">Gender</string>
    <string name="shop_names">Shop Name</string>
    <string name="categorys">Category</string>
    <string name="age_limits">Age Limit</string>
    <string name="educations">Education</string>
    <string name="referral_codes">Referral Code</string>
    <string name="do_you_have_an_account_signup">Don`t have an account? Signup</string>
    <string name="shop_name_rbm">Shop Name</string>
    <string name="area_sector">Area/Sector</string>
    <string name="city_rbm">City</string>
    <string name="occupation_rbm">Occupation</string>
    <string name="outside_shop_image">Outside Shop Image</string>
    <string name="current_services">Current Services</string>
    <string name="interested_services">Interested Services</string>
    <string name="activity_type">Activity Type</string>
    <string name="document_photo">Document Photo</string>
    <string name="address_detail">Address Detail</string>
    <string name="i_accept_the_terms_and_conditions">I Accept the Terms And Conditions</string>
    <string name="please_verify_your_details_carefully">Please verify your details carefully.</string>
    <string name="details_will_not_change_after_invoicing">Details will not change after invoicing.</string>
    <string name="bill_to">Bill To:</string>
    <string name="edit_details">Edit Details</string>
    <string name="place_of_supply">Place of Supply:</string>
    <string name="payment_confirmation_and_invoice_details_will_be_sent_on_below_phone_no_and_email">Payment confirmation and invoice details will be sent on below phone no. and email</string>
    <string name="phone_no">Phone No.:</string>
    <string name="all_above_details_are_correct">All above details are correct</string>
    <string name="accept_and_continue">Accept and continue</string>
    <string name="shop_unit_no">Shop/Unit No. *</string>
    <string name="street_road_block">Street/Road/Block *</string>
    <string name="order_placed">Order Placed?</string>
    <string name="landmark">Landmark</string>
</resources>