<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:iconTint="@color/black"

            android:title="@string/home" />
        <item
            android:id="@+id/nav_camera"
            android:visible="false"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_password"
            android:icon="@drawable/lock"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/shopping_cart"
            android:title="@string/rebliss_shop"
            android:visible="false" />
        <item
            android:id="@+id/nav_showstatus"
            android:icon="@drawable/logout"
            android:title="@string/show_status" />

        <item
            android:id="@+id/nav_invoice"
            android:icon="@drawable/file"
            android:title="@string/invoice_download" />


    </group>
    <item
        android:id="@+id/nav_appVersion"
        android:enabled="false"
        android:title="@string/version_of_application" />


</menu>
