<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_otp_verification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_25sdp">

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:textColor="@color/colorMegentaText"
            android:text="@string/please_type_verification_code_nsent_to"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/input_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:hint="@string/please_enter_your_otp"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            style="@style/ButtonShapeBackground"
            android:paddingLeft="@dimen/_40sdp"
            android:paddingRight="@dimen/_40sdp"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
<TextView
    android:id="@+id/txtotpVerify"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_15sdp"
    android:gravity="center"
    android:textSize="@dimen/_12sdp"
    android:textColor="@color/text_color"
    android:visibility="gone"
    android:text="@string/resend_otp_after"/>

        <Button
            android:id="@+id/resend"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/resend"
            android:textAllCaps="false"
            android:textColor="@color/colorMegentaText"
            android:textSize="@dimen/_12sdp" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
