<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lladdress_merchant"
    android:orientation="vertical"
    android:visibility="gone"
    style="@style/BackgroundColor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp">
    <EditText
        android:id="@+id/etPin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/borderwithaasmani"
        android:hint="@string/pincodes"
        android:inputType="number"
        android:clickable="false"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_13sdp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2">
    <EditText
        android:id="@+id/etState"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/borderwithaasmani"
        android:hint="@string/states"
        android:clickable="false"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_13sdp" />
    <EditText
    android:id="@+id/etCity"
        android:layout_weight="1"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_30sdp"
    android:background="@drawable/borderwithaasmani"
    android:hint="@string/citys"
    android:clickable="false"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:paddingLeft="@dimen/_5sdp"
    android:paddingBottom="@dimen/_5sdp"
    android:textColor="@color/colorBlack"
    android:textSize="@dimen/_13sdp" />

</LinearLayout>
    <EditText
        android:id="@+id/etShopUnit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/borderwithaasmani"
        android:hint="@string/shop_unit_no"
        android:inputType="text"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_13sdp" />
    <EditText
        android:id="@+id/etStreet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/borderwithaasmani"
        android:hint="@string/street_road_block"
        android:inputType="text"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_13sdp" />

    <EditText
        android:id="@+id/etArea"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/borderwithaasmani"
        android:hint="@string/area_sector"
        android:inputType="text"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_13sdp" />

    <EditText
        android:id="@+id/etLandmark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/borderwithaasmani"
        android:hint="@string/landmark"
        android:inputType="text"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_13sdp"
        android:layout_marginBottom="@dimen/_10sdp"/>
</LinearLayout>