<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_20sdp"
    android:background="@drawable/borderblackwithwhite"
    android:orientation="vertical"

    android:padding="@dimen/_10sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/order_placed"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_yes"
            style="@style/ButtonShapeBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/yes"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/tv_no"
            style="@style/ButtonShapeBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/no"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>


</LinearLayout>